# nodejs-express-lambda

./: .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  package-lock.json  package.json  terragrunt.hcl  tsconfig.json
app/: package-lock.json  package.json  tsconfig.json
app/src/: app.ts
nodejs-app-serverless/: Makefile  package-lock.json  package.json  serverless.yml
nodejs_app/: Makefile  docker-compose.yml  package-lock.json  package.json  tsconfig.json  wallaby.conf.js
nodejs_app/openapi/: spec.yml
nodejs_app/src/: index.ts
nodejs_app/src/types/: api.ts
nodejs_app/test/unit/: index.spec.ts  test-handler_test_ts
nodejs_app_sam/: Makefile  jest.config.js  package-lock.json  package.json  sam-template-output.yaml  sam-template.yaml  swagger.yaml
nodejs_app_sam/src/: index.js  service.js
python_app/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  open-api.yml  pyproject.toml
python_app/src/app/: __init__.py  main.py
python_app/tests/: test_app.py
src/: app.ts
terraform/modules/domain/: acm.tf  data.tf  locals.tf  route53.tf  s3.tf  tls.tf  variables.tf
terraform/modules/lambda/: data.tf  locals.tf  main.tf  package.tf  sqs.tf  variables.tf
terraform/modules/nodejs_app_lambda/: main.tf  s3.tf
terraform/modules/python_app_lambda/: data.tf  locals.tf  main.tf  open-api.json  sqs.tf  variables.tf
terragrunt/non-prod/: account.hcl
terragrunt/non-prod/eu-west-2/dev/lambda/: terragrunt.hcl
terragrunt/non-prod/eu-west-2/dev/python_app_lambda/: terragrunt.hcl
