[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Daniele Sangalli <196739+daniel78uk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
awsgi = "^0.0.5"
jsonify = "^0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pipenv-to-requirements = "^0.9.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
flake8 = "^6.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
